# office-controller

./: .gitignore  Cargo.toml  build.rs  config_partition.csv  esp_idf_common.sh  flash_all.sh  flash_config.sh  init.sh  partitions.csv  shell_setup.sh
.cargo/: config.toml
config/: Cargo.toml
config/src/: lib.rs  secure_string.rs
src/: flicker.rs  homeassistant.rs  main.rs  wifi.rs
