[package]
name = "office-controller"
version = "0.1.0"
authors = ["Keith <hnefatl@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"


[[bin]]
name = "office-controller"
harness = false            # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"


[dependencies]
log = "0.4"
esp-hal = { version = "0.22", features = ["esp32"] }
esp-hal-embassy = { version = "0.5", features = ["esp32", "executors"] }
esp-wifi = { version = "0.11", features = [
    "esp32",
    "wifi",
    "esp-alloc",
    "serde",
] }
esp-alloc = "0.5"
esp-storage = { version = "0.4", features = ["esp32"] }
esp-println = { version = "0.12", features = ["esp32", "log"] }
esp-backtrace = { version = "0.14", features = [
    "esp32",
    "panic-handler",
    "println",
] }

# Required until https://github.com/esp-rs/esp-hal/pull/2357 makes it into a version, to get spin-lock-free xtensa-lx.
# Bump esp-hal version at that time.
spin = { version = "0.9", default-features = false, features = [
    "portable_atomic",
] }
xtensa-lx-rt = { version = "0.17", default-features = false, features = [
    "esp32",
] }
heapless = { version = "0.8.0", features = [
    "portable-atomic-critical-section",
] }

embassy-executor = { version = "0.6", features = [
    "task-arena-size-64",
    "executor-thread",
    "integrated-timers",
    "log",
] }
embassy-sync = "0.6"
embassy-time = "0.3"
embassy-net = { version = "0.4", features = [
    "tcp",
    "dns",
    "dhcpv4-hostname",
    "proto-ipv4",
] }
embedded-storage = "0.3"
embedded-io = { version = "0.6", features = ["alloc"] }
embedded-io-adapters = { version = "0.6" }

anyhow = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
zeroize = { version = "1.8.1", features = ["derive", "serde"] }
rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
static_cell = "2.1.0"
config = { path = "config" }

[profile.dev.package.esp-hal]
opt-level = 3
[profile.dev.package.esp-storage]
opt-level = 3
[profile.dev.package.esp-wifi]
opt-level = 3

[build-dependencies]
embuild = "0.32.0"
toml = "0.8"
postcard = { version = "1.1", features = ["alloc"] }
config = { path = "config" }
