[package]
name = "office-controller"
version = "0.1.0"
authors = ["Keith <hnefatl@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"


[[bin]]
name = "office-controller"
harness = false            # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false


[dependencies]
log = "0.4"
esp-hal = { version = "0.22", features = ["esp32"] }
esp-hal-embassy = { version = "0.5", features = [
    "esp32",
    "executors",
    "integrated-timers",
    "log",
] }
esp-wifi = { version = "0.11", features = [
    "esp32",
    "wifi",
    "esp-alloc",
    "serde",
    "log",
] }
esp-alloc = "0.5"
esp-storage = { version = "0.4", features = ["esp32"] }
esp-println = { version = "0.12", features = ["esp32", "log"] }
esp-backtrace = { version = "0.14", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }

# Required until https://github.com/esp-rs/esp-hal/pull/2357 makes it into a version, to get spin-lock-free xtensa-lx.
# Bump esp-hal version at that time.
spin = { version = "0.9", default-features = false, features = [
    "portable_atomic",
] }
xtensa-lx-rt = { version = "0.17", default-features = false, features = [
    "esp32",
] }
heapless = { version = "0.8.0", features = [
    "portable-atomic-critical-section",
] }

embassy-executor = { version = "0.6", features = [
    "task-arena-size-4096",
    "executor-thread",
    "integrated-timers",
    "log",
] }
embassy-sync = "0.6"
embassy-time = "0.3"
embassy-net = { version = "0.4", features = [
    "tcp",
    "dns",
    "dhcpv4-hostname",
    "proto-ipv4",
] }
embedded-storage = "0.3"
embedded-io = { version = "0.6", features = ["alloc"] }
embedded-io-adapters = { version = "0.6" }

anyhow = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
zeroize = { version = "1.8.1", features = ["derive", "serde"] }
rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
static_cell = "2.1.0"
config = { path = "config" }

[profile.dev.package.esp-hal]
opt-level = 3
[profile.release.package.esp-hal]
opt-level = 3
[profile.dev.package.esp-storage]
opt-level = 3
[profile.release.package.esp-storage]
opt-level = 3
[profile.dev.package.esp-wifi]
opt-level = 3
[profile.release.package.esp-wifi]
opt-level = 3

[build-dependencies]
toml = "0.8"
postcard = { version = "1.1", features = ["alloc"] }
config = { path = "config" }
