[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
postcard = { version = "1.1", features = ["alloc"] }
zeroize = { version = "1.8.1", features = ["derive", "serde"] }
